--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "type": "commonjs",
   "dependencies": {
     "@fastify/cors": "^11.0.1",
+    "@fastify/type-provider-typebox": "^5.2.0",
+    "@sinclair/typebox": "^0.34.38",
     "dotenv": "^17.2.0",
     "fastify": "^5.4.0",
     "fastify-cors": "^6.0.3",
